@@ -1,0 +1,1 @@
+pid_t pty_fork(int *ptrfdm, char *slave_name);
