@@ -7,6 +7,8 @@
 
     * src/device_pipe.[ch]: New.
 
+    * src/parse.y: Support for "pipe device".
+
 2003-07-09 Jim Garlick <garlick@llnl.gov>
 
     * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev, etc/baytech.dev:
